--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "npx tsc",
     "run": "node dist/app.js",
-    "dev": "nodemon src/app.ts"
+    "dev": "tsc-watch --onSuccess \"node dist/app.js"
   },
   "keywords": [],
   "author": "",
@@ -18,16 +18,17 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.0",
+    "tsc-watch": "^6.2.0",
     "validator": "^13.12.0"
   },
   "devDependencies": {
+    "@tsconfig/node20": "^20.1.4",
     "@types/bcrypt": "^5.0.2",
     "@types/body-parser": "^1.19.5",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.14.10",
     "@types/validator": "^13.12.0",
-    "nodemon": "^3.1.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.3"
   }
