--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "npx tsc",
     "run": "node dist/app.js",
-    "dev": "tsc-watch --onSuccess \"node dist/app.js"
+    "dev": "tsc-watch --onSuccess \"node dist/app.js\""
   },
   "keywords": [],
   "author": "",
